<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:visibility="visible"
    tools:context=".MainMenu">


    <TextView
        android:id="@+id/user"
        android:text="@string/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/TextUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_toRightOf="@+id/user"
        android:layout_toEndOf="@+id/user">
</EditText>

    <TextView
        android:id="@+id/pass"
        android:text="@string/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/TextPass"
        android:layout_toRightOf="@+id/pass"
        android:layout_toEndOf="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:inputType="textPassword"
        android:ems="10"
        android:textAppearance="?android:attr/textAppearanceMedium">
    </EditText>

    <Button
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:visibility="visible"
        android:text="@string/button_send" />

    <TextView
        android:id="@+id/Tent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="200dp"
        android:visibility="visible"
        android:text="@string/atemps"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/attemps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="155dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="200dp"
        android:visibility="visible"
        android:text="@string/tent"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/Sair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:visibility="visible"
        android:text="@string/Exit"/>

</RelativeLayout>
